fix wrong color

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -69,7 +69,7 @@ td {
   height: 100%;
   background-color: #e3e3d8;
   content: ' ';
-  color: #000;
+  color: #e3e3d8;
 }
 
 td.songname {
